# Nasal-Interpreter

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  abstract_syntax_tree.h  balloon.h  balloon_type.h  balloon_var.h  interpreter_lab.cpp  lab.cpp  lexer(useless).h  lexical_analysis.cpp  lib.nas  main.cpp  makefile  nasal.ENBF  nasal.ebnf  nasal.h  nasal_ast.h  nasal_builtin.h  nasal_bytecode_vm.h  nasal_codegen.h  nasal_dbg.h  nasal_enum.h  nasal_err.h  nasal_func_stack.h  nasal_functional.h  nasal_gc.h  nasal_hash.cpp  nasal_hash.h  nasal_import.h  nasal_lexer.h  nasal_list.cpp  nasal_list.h  nasal_misc.h  nasal_opcode.h  nasal_opt.h  nasal_parse.h  nasal_print.h  (+9 more)
ast/: ast_dumper.cpp  ast_dumper.h  ast_visitor.cpp  ast_visitor.h  nasal_new_ast.cpp  nasal_new_ast.h  nasal_new_builtin.cpp  nasal_new_codegen.cpp  nasal_new_codegen.h  nasal_new_dbg.cpp  nasal_new_dbg.h  nasal_new_err.cpp  nasal_new_err.h  nasal_new_gc.cpp  nasal_new_gc.h  nasal_new_header.h  nasal_new_import.cpp  nasal_new_import.h  nasal_new_lexer.cpp  nasal_new_lexer.h  nasal_new_main.cpp  nasal_new_opcode.cpp  nasal_new_opcode.h  nasal_new_parse.cpp  nasal_new_parse.h  nasal_new_vm.cpp  nasal_new_vm.h  new_main.cpp  optimizer.cpp  symbol_finder.cpp
balloon/: abstract_syntax_tree.cpp  abstract_syntax_tree.h  balloon.h  balloon_lexer.h  balloon_parse.h  balloon_scope.h  balloon_type.h  balloon_var.h  loop.txt  main.cpp  test.txt  var.txt
doc/: README_zh.md  benchmark.md  dev.md  dev_zh.md  namespace.md  nasal-http-test-web.html  nasal.ebnf  tutorial.md  tutorial_zh.md  vs.md  windows-build.md
misc/: ast.cpp  lexical_analysis.cpp  nasal_parser.h
module/: fib.cpp  json.cpp  keyboard.cpp  libfib.nas  libjson.nas  libkey.nas  libmat.nas  libmd5.nas  libnasock.nas  libsock.nas  makefile  matrix.cpp  md5.cpp  nasocket.cpp
nasal-web-app/: package.json  server.js  server_repl.js  std
src/: ast_dumper.cpp  ast_dumper.h  ast_format.cpp  ast_format.h  ast_visitor.cpp  ast_visitor.h  bits_lib.cpp  bits_lib.h  coroutine.cpp  coroutine.h  dylib_lib.cpp  dylib_lib.h  fg_props.cpp  fg_props.h  format.cpp  io_lib.cpp  io_lib.h  json_lib.cpp  json_lib.h  main.cpp  math_lib.cpp  math_lib.h  nasal.h  nasal_ast.cpp  nasal_ast.h  nasal_builtin.cpp  nasal_builtin.h  nasal_codegen.cpp  nasal_codegen.h  nasal_dbg.cpp  nasal_dbg.h  nasal_err.cpp  nasal_err.h  nasal_gc.cpp  nasal_gc.h  nasal_import.cpp  nasal_import.h  nasal_lexer.cpp  nasal_lexer.h  nasal_misc.cpp  (+43 more)
std/: argparse.nas  bits.nas  coroutine.nas  csv.nas  dylib.nas  fg_env.nas  file.nas  io.nas  json.nas  lib.nas  list.nas  log.nas  mat.nas  math.nas  module.nas  os.nas  padding.nas  phi.nas  process_bar.nas  props.nas  queue.nas  regex.nas  result.nas  runtime.nas  sort.nas  stack.nas  string.nas  subprocess.nas  udp.nas  unix.nas  utils.nas
stl/: csv.nas  fg_env.nas  file.nas  json.nas  lib.nas  list.nas  mat.nas  module.nas  padding.nas  process_bar.nas  queue.nas  result.nas  sort.nas  stack.nas  string.nas
test/: NasNeuron.nas  ai.nas  andy_gc_test.nas  argparse_test.nas  ascii-art.nas  auto-push.nas  auto_crash.nas  bf.nas  bfcolored.nas  bfconvertor.nas  bfs.nas  bigloop.nas  bp.nas  burningship.nas  calc.nas  call_ide.nas  choice.nas  choose.nas  class.nas  console3D.nas  coroutine.nas  datalog.nas  diff.nas  donuts.nas  efb.nas  exception.nas  feigenbaum.nas  fib.nas  filesystem.nas  first_pro.nas  flush_screen.nas  fmz.nas  func.nas  gc_test.nas  globals_test.nas  hexdump.nas  httptest.nas  json.nas  jsonrpc.nas  juliaset.nas  (+50 more)
testing_files/: auto_crash.nas  call_ide.txt  func.txt  loop.txt
tools/: andy_gc_test.nas  compiling_test.nas  fgfs_props_getter.nas  file2ppm.nas  find_clang.nas  pack.py  push.nas  repl.nas  search_file.nas
version0.1/: nasal_func.h  nasal_hash.h  nasal_lexer.h
version0.10/: a.txt  nasal_parser.h
version0.11/: a.txt  bnf.bison  main.cpp  nasal_lexer.h  nasal_parser.h
version0.15/: ast.h  main.cpp  nasal.bison  nasal_parser.h  token_type.h
version0.16/: abstract_syntax_tree.h  code_generator.h  main.cpp  nasal.h  nasal_parser.h  nasal_token_type.h  test.txt
version0.17/: abstract_syntax_tree.h  ast_generator.h  main.cpp  nasal_lexer.h  nasal_parser.h  test.txt
version0.18/: abstract_syntax_tree.h  main.cpp  nasal_parser.h  nasal_token_type.h
version0.19/: main.cpp  nasal.h  nasal_lexer.h  nasal_parser.h  nasal_token_type.h  test.txt
version0.2/: nasal.h  nasal_func_stack.h  nasal_functional.cpp  nasal_functional.h  nasal_hash.cpp  nasal_hash.h  nasal_interpreter.cpp  nasal_lexer.h  nasal_list.cpp  nasal_list.h  nasal_parse.h  nasal_print.h  nasal_var.cpp  nasal_var.h  nasal_var_stack.h
version0.3/: ebnf.cpp  ide.txt  nasal.h  nasal_functional.h  nasal_hash.cpp  nasal_interpreter.cpp  nasal_lexer.h  nasal_list.cpp  nasal_parse.h  nasal_var.cpp
version0.4/: ebnf.cpp  nasal.h  nasal_func.cpp  nasal_func.h  nasal_functional.h  nasal_interpreter.cpp  nasal_lexer.h  nasal_list.h  nasal_parse.h  nasal_print.h
version0.5/: a.txt  b.txt  bug_.txt  ebnf.cpp  nasal_func_stack.h  nasal_interpreter.cpp  nasal_lexer.h  nasal_parse.h  nasal_token.cpp  nasal_token.h
version0.6/: ebnf.cpp  finished.txt  main.cpp  nasal.h  nasal_lexer.h  nasal_parser.h  remainbug.txt
version0.7/: ebnf.cpp  ll(1).txt  lr_pda_demo.cpp  main.cpp  n.cpp  nasal_lexer.h  nasal_parser.h  pda.h  pda_demo.cpp
version0.9/: a.txt  main.cpp  nasal_LR_demo.cpp  nasal_lexer.h  nasal_parser.h
version1.0/: abstract_syntax_tree.h  ast.h  ast_generator.h  call_ide.txt  choose.txt  func.txt  loop.txt  main.cpp  nasal.h  nasal_lexer.h  nasal_parser.h  nasal_token_type.h  nasal_var.cpp  nasal_var.h  nasal_var_inrun_list.h  test.txt
version1.1/: ast.h  main.cpp  nasal.h  nasal_lexer.h  nasal_parser.h
version1.2/: ast.h  hello.nas  main.cpp  nasal.h  nasal_lexer.h  nasal_parser.h  nasal_runtime.h  nasal_token_type.h
version1.3/: ast.h  main.cpp  nasal.h  nasal_parser.h  nasal_vm.h
version2.0/: abstract_syntax_tree.h  loop_and_choice.nas  main.cpp  nasal.h  nasal_ast.h  nasal_builtinfunc.h  nasal_enum.h  nasal_gc.h  nasal_lexer.h  (+11 more)
(+113 files in other folders)
